20210601 move SysadmLogWriter interface to sysadmlogger/sysadmlogger.go as other packages use this interface
20210601 在type HTMLDebug struct 添加logWriter interface{} 用于记录logwriter接口
***** 20210602 修改了render下文件，增加了logWriter接口调用。 所以，在sysadmServer调用render时需要做相应的修改。
***** 20210602 尝试废弃掉debug.go文件，所以，在sysadmServer调用debug相关函时需要相应的修改。